--- a/project1Frontend/src/Pages/page.css
+++ b/project1Frontend/src/Pages/page.css
@@ -20,7 +20,7 @@
 .ActionsBox{
     display: flex;
     flex-direction: column;
-    
+
     padding-right: 32px;
 
     border-right: solid 1px black;
@@ -40,10 +40,10 @@
     display: flex;
     flex-direction: column;
     width: 50%;
-
-    width: fit-content;
 }
 
 .Button{
     min-width: min-content;
+    width: 125px;
+    height: 50px;
 }
